# sqlproctor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
contracts/: bird_financial.yml  retail.yml  saas.yml  tpcds.yml
demo/: bird_gold.py  demo.py  eval.py  eval_cases.yml  live_eval.py  passthrough_demo.py
docs/: LIMITATIONS.md
examples/: bird_financial_seed.py  mock_upstream.py  saas_seed.py  seed.py  tpcds_seed.py
examples/queries/: revenue_by_region_bad.sql  revenue_by_region_good.sql
results/: RESULTS.md  benchmark.jsonl  live_eval.jsonl
results/transcripts/: openrouter_z-ai_glm-5.2_20260707T204915Z.json  retail_local_qwen36-27b-mtp-q4km_20260708T233825Z.json  retail_openrouter_anthropic_claude-opus-4.8_high_20260709T002313Z.json  retail_openrouter_google_gemini-3.1-pro-preview_high_20260709T003835Z.json  retail_openrouter_openai_gpt-5.5_high_20260709T003015Z.json  retail_openrouter_z-ai_glm-5.2_high_20260709T004457Z.json  saas_local_qwen36-27b-mtp-q4km_20260708T232135Z.json  saas_openrouter_anthropic_claude-opus-4.8_high_20260709T002615Z.json  saas_openrouter_google_gemini-3.1-pro-preview_high_20260709T004115Z.json  saas_openrouter_openai_gpt-5.5_high_20260709T003356Z.json  saas_openrouter_z-ai_glm-5.2_high_20260709T004746Z.json  tpcds_openrouter_google_gemini-3.1-pro-preview_high_20260709T040213Z.json  tpcds_openrouter_openai_gpt-5.5_high_20260709T040524Z.json  tpcds_openrouter_z-ai_glm-5.2_high_20260709T041000Z.json
src/sqlproctor/: __init__.py  bootstrap.py  cli.py  contract.py  ledger.py  mcp_server.py  results.py  upstream.py  verifier.py  violation.py
tests/: conftest.py  test_bootstrap.py  test_case_insensitive.py  test_cli.py  test_contract_yaml.py  test_cte_fan_out.py  test_eval.py  test_ledger.py  test_mcp_server.py  test_metrics.py  test_results.py  test_saas_contract.py  test_tpcds_contract.py  test_upstream.py  test_verifier.py
